@@ -63,6 +63,7 @@ aarch64-tests: \
 	test0036-aarch64-binary \
 	test0037-aarch64-binary \
 	test0038-aarch64-binary \
+	test0039-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -112,6 +113,7 @@ amd64-tests: \
 	test0036-amd64-binary \
 	test0037-amd64-binary \
 	test0038-amd64-binary \
+	test0039-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -158,6 +160,7 @@ knight-posix-tests: \
 	test0036-knight-posix-binary \
 	test0037-knight-posix-binary \
 	test0038-knight-posix-binary \
+	test0039-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -228,6 +231,7 @@ armv7l-tests: \
 	test0036-armv7l-binary \
 	test0037-armv7l-binary \
 	test0038-armv7l-binary \
+	test0039-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -277,6 +281,7 @@ x86-tests: \
 	test0036-x86-binary \
 	test0037-x86-binary \
 	test0038-x86-binary \
+	test0039-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -326,6 +331,7 @@ riscv32-tests: \
 	test0036-riscv32-binary \
 	test0037-riscv32-binary \
 	test0038-riscv32-binary \
+	test0039-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -375,6 +381,7 @@ riscv64-tests: \
 	test0036-riscv64-binary \
 	test0037-riscv64-binary \
 	test0038-riscv64-binary \
+	test0039-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -500,6 +507,9 @@ test0037-riscv32-binary: M2-Planet | results
 
 test0038-riscv32-binary: M2-Planet | results
 	test/test0038/run_test.sh riscv32
+
+test0039-riscv32-binary: M2-Planet | results
+	test/test0039/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -642,6 +652,9 @@ test0037-riscv64-binary: M2-Planet | results
 test0038-riscv64-binary: M2-Planet | results
 	test/test0038/run_test.sh riscv64
 
+test0039-riscv64-binary: M2-Planet | results
+	test/test0039/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -782,6 +795,9 @@ test0037-aarch64-binary: M2-Planet | results
 
 test0038-aarch64-binary: M2-Planet | results
 	test/test0038/run_test.sh aarch64
+
+test0039-aarch64-binary: M2-Planet | results
+	test/test0039/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -924,6 +940,9 @@ test0037-amd64-binary: M2-Planet | results
 test0038-amd64-binary: M2-Planet | results
 	test/test0038/run_test.sh amd64
 
+test0039-amd64-binary: M2-Planet | results
+	test/test0039/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -1055,6 +1074,9 @@ test0037-knight-posix-binary: M2-Planet | results
 
 test0038-knight-posix-binary: M2-Planet | results
 	test/test0038/hello-knight-posix.sh
+
+test0039-knight-posix-binary: M2-Planet | results
+	test/test0039/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1254,6 +1276,9 @@ test0037-armv7l-binary: M2-Planet | results
 test0038-armv7l-binary: M2-Planet | results
 	test/test0038/run_test.sh armv7l
 
+test0039-armv7l-binary: M2-Planet | results
+	test/test0039/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1394,6 +1419,9 @@ test0037-x86-binary: M2-Planet | results
 
 test0038-x86-binary: M2-Planet | results
 	test/test0038/run_test.sh x86
+
+test0039-x86-binary: M2-Planet | results
+	test/test0039/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
