@@ -288,6 +288,13 @@ a7c8a9fdbbaa717a8f946ebf53e72f3ebf78546b35f9c6e905cb348e110689ac  test/results/t
 57c337bb706ee95187fa7ac232ba9e21fdb5a52886ce3ee8e67896fb5c0a9464  test/results/test0038-riscv32-binary
 b35d1abd8c1e75fafe85f21ebf2f76c11500f3e40a4d047746765133f10c2104  test/results/test0038-riscv64-binary
 29193bff8acf25eba2e9bae1de1f956d58cc114491e9059c525f27e5a30a6f6f  test/results/test0038-x86-binary
+bd7eb0a298fb0deff881c60f7a0e94435ac6ee88b605e345551bdd66ed6436ff  test/results/test0039-aarch64-binary
+0a094454f785ae502303ba06c18cf094035ca976eb8ae669f78cd48fe1f6deb1  test/results/test0039-amd64-binary
+3a1455ca8edcc5af77d6e2498d31ddee53527c1c05f78f5578c4ff4f2a9566f6  test/results/test0039-armv7l-binary
+81f261da7180d6ad81384bcf30f70adeb57c624e9250dccf4573270fd53bbe6e  test/results/test0039-knight-posix-binary
+e9e8c703e272203c5846f5eb402f84abe64318e5cf470870a452960d48ee37fe  test/results/test0039-riscv32-binary
+838571f0666df8bba205b8496c53bcb428cd05ee860d1c63f7dd32609909264d  test/results/test0039-riscv64-binary
+25cfa9f5bd75aec4e5c3e8bc44cfd70a2b53b128d7ab910a1e1f499885d9bb49  test/results/test0039-x86-binary
 9fbdb6d8893d810edcd82f573dd8237bd9821c907393f286a3c21b1f8f721bb8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -336,10 +343,10 @@ abf349aaf23111dcf813ca4c11d725e154d2367bf5ab91b62e022fd34da72f7d  test/results/t
 af4dd167d0ea436831ad24b3c337a4255b09e4628ff00979e7787735de927186  test/results/test0106-riscv32-binary
 818e8e8de251909fac6002b7b6d66a70f5e8ed7eeec5ddf5b8b3588cbc436a53  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-49a830c47ca5d7a9e3f64c20999fa1b4c3331987f923469d2db74576cb914966  test/results/test1000-aarch64-binary
-5642cb3029699db58dac8986e711adc8e3b919eb862dabf57fb3c1e21d23d816  test/results/test1000-amd64-binary
-38a9a75cfc010173eeab3a533c8ff09e93d973315f47f9bba39c5d74c358d93a  test/results/test1000-armv7l-binary
-15efee4e1851564e1feac182c102f10dd170f302fe70f48543f2efa1c229df74  test/results/test1000-knight-posix-binary
-7a062eca871c0316f19c5376756fa854d987cac3e0eb992a779f7284477ec342  test/results/test1000-riscv32-binary
-495e063604e9247a9a6107571713b5427e2506a13ef22b9e66f7cbbadd962bc7  test/results/test1000-riscv64-binary
-b10d94e4493dbe0a4f0b239551ab0fa28be167944495c5317089d906d76eb3ae  test/results/test1000-x86-binary
+1c4e54b165a7ae593dce4058f208acc5ed67f3823535eeb96ffc36eecf616e40  test/results/test1000-aarch64-binary
+eeae346c6621b4668bda7d1ccbff01f80c1198f1634e3effffd1e04702d78f88  test/results/test1000-amd64-binary
+84ab7a7bbf2ea71e3379094a78caebf56b38c6362324a5dbd3fbf76270e2eaa7  test/results/test1000-armv7l-binary
+f0f2d9f824aabfbedb2cca7ceb67f73928aec0eafd302baf0cf4015d527d8c7a  test/results/test1000-knight-posix-binary
+38098269d0cc8e341e944516d569877d7b72ca769c2113396b32115484108b62  test/results/test1000-riscv32-binary
+19c06a9fd4c17b6b876453065e3a6c27bb3840caee50b840ca631f5fbf99f435  test/results/test1000-riscv64-binary
+9901de868dba500deda143ca330a4980986c71f354c3ec0eeb0d8c3042e6981b  test/results/test1000-x86-binary
