@@ -29,6 +29,7 @@ Added support for octal escape codes in strings and characters
 Added support for \? escape code in strings and characters
 Added support for multiple variable declarations per statement
 Added support for `static`, `_Noreturn`, and `inline` qualifiers for globals
+Added support for `static` variables in functions
 
 * 1.11 - 2023-11-01
 ** Added
